style.css
body {
    background-image:url("http://3.bp.blogspot.com/-aNRb0w9Uu2E/Uk0w1v9lXjI/AAAAAAAAHrM/RipxfZqlQQ4/s1600/Texture-Backgrounds-Wallpaper-HD.jpg");
}

img {
    margin-left: 10%px;
    margin-top:10px;
}

.row {
    position: relative;
    margin-left: 10%;
    margin-right: 10%;
}

.white {
    border: 1px solid black;
    width: 10%;
    height: 60px;
    background-color:white;
    float:left;
}
 
.black {
    border: 1px solid black;
    width: 10%;
    height: 60px;
    background-color:#3f3f3f;
    float:left;
}

#footer {
    border:solid 1px;
    padding: 10px;
    margin:10px;
    width:100%;
    background-color: rgb(29, 154, 163);
    justify-content: center;
}

.clear{
    clear:both; 
}

#container {
    margin-top:20%;
    margin-left:10%;
    margin-right:10%;
    margin-bottom:5%;
}

#title {
    position:fixed;
    left:0px; 
    padding:10px;
    margin-top:2%;
    margin-bottom:2%;
    width:100%;
    background-color:rgb(29, 154, 163);
    text-align:center; 
    z-index:10;
    font-family: "JustLettersMedium";
    font-weight: normal;
    font-style: normal;
    font-size: 36px;
}

